feature: udistrital/sga_cliente#1430 creación y edición colecciones
